@@ -1,10 +1,12 @@
 # Generated by roxygen2 (4.0.2): do not edit by hand
 
+S3method(as.binary,phylo)
 S3method(as.data.frame,phylo)
 S3method(fortify,jplace)
 S3method(fortify,phylo)
 export("set.treeinfo<-")
 export(NJ)
+export(as.binary)
 export(geom_aline)
 export(geom_eplace)
 export(geom_tiplab)
@@ -22,6 +24,7 @@ exportMethods(get.placements)
 exportMethods(get.tree)
 exportMethods(get.treeinfo)
 exportMethods(show)
+importFrom(ape,is.binary.tree)
 importFrom(ape,ladderize)
 importFrom(ape,read.tree)
 importFrom(ggplot2,"%+replace%")
