@@ -1,0 +1,16 @@
+% Generated by roxygen2 (4.0.2): do not edit by hand
+\name{as.binary}
+\alias{as.binary}
+\title{as.binary}
+\usage{
+as.binary(tree, ...)
+}
+\arguments{
+\item{tree}{phylo, object}
+
+\item{...}{additional parameter}
+}
+\description{
+as.binary
+}
+
